--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,6 +6,7 @@ spring.sql.init.mode=embedded
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
